Cleaned up the Code Fixed some Bugs